Fix overflow for menu

--- a/src/sass/blocks/menu/menu.scss
+++ b/src/sass/blocks/menu/menu.scss
@@ -44,7 +44,7 @@
     top: 64px;
     left: -100%;
 
-    overflow: scroll;
+    overflow: auto;
 
     width: 100%;
     min-width: 270px;
